# quake-log-parser

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
quake_log_parser/: __main__.py  database.py  ingestion.py  player_ranking.py  report.py  settings.py  source.py
quake_log_parser/models/: player_ranking.py  source_url.py
quake_log_parser/parser/: token.py  token_entity.py  tokenization.py
quake_log_parser/quake/: constants.py  death_cause.py
quake_log_parser/ranking/: game.py  matches.py
quake_log_parser/repositories/: log_record_repository.py  source_repository.py
quake_log_parser/transforms/: tokenization.py
tests/: conftest.py
tests/fixtures/: simple-match.txt
tests/parser/: test_tokenization.py
tests/ranking/: test_game.py  test_matches.py
tests/transforms/: test_tokenization.py
